# workspace

./: pyproject.toml  setup.py
workspace/: __init__.py  core.py
workspace.egg-info/: PKG-INFO  SOURCES.txt
